# oselm

./: .gitignore  CMakeLists.txt  elm_base.h  main.cpp  mnist.cpp  mnist.h  mnist_path.h  oselm.h
matlab/: make.m  oselm.m  oselm_mex.cpp  test.m  test2.m  test3.m
